This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix inaccurate byteswap comment in sha512module.c
Type: Stage: resolved
Components: Library (Lib) Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, corona10, erlendaasland
Priority: normal Keywords: patch

Created on 2021-02-12 19:45 by erlendaasland, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24518 merged erlendaasland, 2021-02-12 19:46
Messages (4)
msg386873 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2021-02-12 19:45
Include/internal/pycore_bitutils.h is included bco. _Py_bswap64(), not _Py_bswap32().
msg386877 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2021-02-12 20:21
Introduced by 1ae035b7e847064d09df01ca62b8a761e9b5aae3
msg386950 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-14 14:14
Thank you Erlend!
msg386951 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-14 14:14
New changeset 1b57426e3a7842b4e6f9fc13ffb657c78e5443d4 by Erlend Egeberg Aasland in branch 'master':
bpo-43210: Fix byteswap comment in sha512.module.c (GH-24518)
https://github.com/python/cpython/commit/1b57426e3a7842b4e6f9fc13ffb657c78e5443d4
History
Date User Action Args
2022-04-11 14:59:41adminsetgithub: 87376
2021-02-14 14:14:51corona10setmessages: + msg386951
2021-02-14 14:14:48corona10setstatus: open -> closed

nosy: + corona10
messages: + msg386950

resolution: fixed
stage: patch review -> resolved
2021-02-12 20:21:47erlendaaslandsetmessages: + msg386877
2021-02-12 19:49:27erlendaaslandsettitle: Fix inaccurate byteswap comment in sha512.module.c -> Fix inaccurate byteswap comment in sha512module.c
2021-02-12 19:46:28erlendaaslandsetkeywords: + patch
stage: patch review
pull_requests: + pull_request23305
2021-02-12 19:45:59erlendaaslandcreate