bpo-43210: Fix byteswap comment in sha512.module.c (GH-24518)